Prevented the logs from being cut off

--- a/scss/animations/hero.scss
+++ b/scss/animations/hero.scss
@@ -1,5 +1,6 @@
 #clouds {
   background-image: url('../img/parallax-backgrounds/hero.png');
+  background-position: bottom;
 
   .cloud {
     position: absolute;
